# sensor

./: rosserial.odt  schunk_ros.odt
experiments/: 18_2:15_experiment.csv  18_2:7_experiment.csv  1_16:16_contact-slide-experiment.csv  1_16:18_contact-slide-experiment.csv  1_16:21_contact-slide-experiment.csv  1_16:24_contact-slide-experiment.csv  1_16:29_contact-slide-experiment.csv  1_16:34_contact-slide-experiment.csv  1_16:35_contact-slide-experiment.csv  1_16:37_contact-slide-experiment.csv  1_16:38_contact-slide-experiment.csv  1_16:39_contact-slide-experiment.csv  1_16:41_contact-slide-experiment.csv  1_16:45_contact-slide-experiment.csv  1_16:46_contact-slide-experiment.csv  1_16:53_contact-slide-experiment.csv  1_16:54_contact-slide-experiment.csv  1_16:55_contact-slide-experiment.csv  1_17:8_contact-slide-experiment.csv  1_17:9_contact-slide-experiment.csv  4_12:35_contact-slide-experiment.csv  4_12:37_contact-slide-experiment.csv  4_12:43_contact-slide-experiment.csv  4_12:44_contact-slide-experiment.csv  4_12:45_contact-slide-experiment.csv  4_12:46_contact-slide-experiment.csv  4_12:47_contact-slide-experiment.csv  4_12:48_contact-slide-experiment.csv  4_12:49_contact-slide-experiment.csv  4_12:50_contact-slide-experiment.csv  4_12:51_contact-slide-experiment.csv  4_12:52_contact-slide-experiment.csv  4_12:53_contact-slide-experiment.csv  4_12:54_contact-slide-experiment.csv  4_12:55_contact-slide-experiment.csv  4_13:11_contact-slide-experiment.csv  4_13:50_contact-slide-experiment.csv  4_13:6_contact-slide-experiment.csv  4_13:7_contact-slide-experiment.csv  4_13:9_contact-slide-experiment.csv  (+4 more)
hall_data/: Calibration.ipynb  Hall_Calibration.ipynb  blue_10_18:54_data.csv  blue_15_19:25_data.csv  blue_17_23:41_data.csv  green_30_9:19_data.csv  green_30_9:30_data.csv  green_30_9:31_data.csv  green_30_9:33_data.csv  red_30_10:1_data.csv  red_30_10:2_data.csv  red_30_10:7_data.csv  red_30_9:57_data.csv  red_30_9:58_data.csv  red_30_9:59_data.csv  yellow_10_18:32_data.csv  yellow_13_23:22_data.csv  yellow_17_23:16_data.csv  yellow_17_23:4_data.csv
hall_effect_uni/: hall_effect_uni.ino
multi_hall/: multi_hall.ino
ourSensor_msgs/: CMakeLists.txt
sensor/: CMakeLists.txt  package.xml
sensor/src/: Untitled.ipynb  accel_check.py  accel_ml.py  accel_pub.py  accel_stop.py  accel_sub.cpp  contact_slide.cpp  experiment.cpp  hall_calibrate.cpp  home_pos.py  hri.cpp  ml_data.cpp  move_up_down.py  publisher_accelerometer.py  sensors.csv  test_move.py  two_sensors.cpp
sensor/src/texture_recognition/: plain_04_25_15-27-41.csv
sensor/src/trash_codes/: buffer.cpp  contact_slide.h  hri.cpp  kinematic_control.cpp  kinematic_control.h  old_slide.cpp  safety_multithread.cpp
universal_robot/ur_description/urdf/: ur5_joint_limited_robot.urdf.xacro  ur5_robot.urdf.xacro
ur_driver/: calibration.py  home_pos.py  kinematics  kinematics.py  move_up_down.py  test_move.py  up_pos.py
ur_driver/src/ur_driver/: driver.py
